# eonet-cascades

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: conus.yaml
docs/: PROJECT_VISION.md  eonet-cascades-status.docx  eonet-cascades-status.pptx  eonet-cascades-summary.pptx
docs/notes/: case-study-francine.md  case-study-summary.md  future-work.md  mark-head-collapse-chain.md  tier1-cloud-runbook.md  tier1-recovery-gate-evidence.md  (+3 more)
notebooks/: 01_data_exploration.ipynb  02_hawkes_baseline.ipynb  03_tier0_vs_tier1.ipynb
scripts/: case_study_extended.py  case_study_francine.py  case_study_press_quality.py  case_study_storm_only.py  make_headline_figures.py  make_methodology_figures.py  make_summary_pptx.py  probe_forward_sim.py  run_task13.py  run_task13_v2.py
tests/: conftest.py  test_attribution.py  test_aux_mark_loss.py  test_cli.py  test_config.py  test_ctlstm.py  test_dedup.py  test_easytpp_crosscheck.py  test_embeddings.py  test_eonet.py  test_firms.py  test_forward_sim_matrix.py  test_hawkes_fit.py  test_hawkes_fit_l1.py  test_hawkes_intensity.py  test_hawkes_likelihood.py  test_hawkes_likelihood_perf.py  test_http.py  test_ingest_integration.py  test_interpret_excitation.py  test_manifests.py  test_mark_head_mlp.py  test_mark_rebalance.py  test_marks.py  test_mdn_head.py  test_models_base.py  test_monte_carlo.py  test_neural_hawkes.py  test_neural_recovery.py  test_neural_training.py  test_noaa.py  test_schema.py  test_store.py  test_synthetic_gen.py  test_synthetic_recovery.py  test_thinning.py  test_usgs.py
(+42 files in other folders)
