[project]
name = "eonet-cascades"
version = "0.0.1"
description = "Spatio-temporal point process benchmark for natural-hazard event cascades"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "duckdb>=1.0",
    "polars>=1.0",
    "pyarrow>=15",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.5",
    "respx>=0.21",
    "ipykernel>=6",
]
ml = [
    "torch>=2.2",
    "matplotlib>=3.8",
    "scienceplots>=2",
    "cartopy>=0.23",
    "shapely>=2",
    "pyproj>=3.6",
]

[project.scripts]
eonet = "eonet_cascades.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eonet_cascades"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # long lines OK in test fixtures

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks slow integration tests (deselect with -m 'not slow')",
    "network: marks tests that hit real network (deselect with -m 'not network')",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
    "nbformat>=5.10.4",
]
